<resources>
    <string name="app_name">MiniStockbit</string>
    <string name="watchlist">Watchlist</string>
    <string name="top_tier">Top Tier</string>
    <string name="login">Login</string>
    <string name="main">Main</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="search">Search</string>
    <string name="btn_login_with_google">Login with Google</string>
    <string name="btn_login_with_facebook">Login with Facebook</string>
    <string name="or">Or</string>
    <string name="hint_username_or_email">Username or Email</string>
    <string name="hint_password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_with_fingerprint">Login with Fingerprint</string>
    <string name="text_dont_have_account">Don\'t have an account?</string>
    <string name="text_join_now">Join Now</string>
    <string name="btn_retry">Tap to Retry</string>
    <string name="text_error_message">Oooppss...Something went wrong</string>
</resources>