<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?parentBackgroundColor"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnLoginBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_12dp"
        android:layout_marginTop="@dimen/size_12dp"
        app:layout_constraintEnd_toStartOf="@+id/tvLoginHeader"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/grey_shady" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLoginHeader"
        style="@style/H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/btnLoginBack"
        app:layout_constraintEnd_toStartOf="@+id/btnLoginContact"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnLoginBack"
        app:layout_constraintTop_toTopOf="@+id/btnLoginBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnLoginContact"
        android:layout_width="@dimen/size_40dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_marginEnd="@dimen/size_12dp"
        android:padding="@dimen/size_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/tvLoginHeader"
        app:layout_constraintTop_toTopOf="@+id/btnLoginBack"
        app:srcCompat="@drawable/ic_headphones"
        app:tint="@color/grey_shady" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginGoogle"
        style="?attr/socialButtonStyle"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/btn_login_with_google"
        app:icon="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginBack" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginFacebook"
        style="?attr/socialButtonStyle"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_4dp"
        android:text="@string/btn_login_with_facebook"
        app:icon="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginHorizontal="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_32dp"
        android:background="@color/grey_smoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFacebook" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?parentBackgroundColor"
        android:paddingHorizontal="@dimen/size_16dp"
        android:text="@string/or"
        android:textColor="@color/grey_shady"
        app:layout_constraintBottom_toBottomOf="@+id/viewDivider"
        app:layout_constraintEnd_toEndOf="@+id/viewDivider"
        app:layout_constraintStart_toStartOf="@+id/viewDivider"
        app:layout_constraintTop_toTopOf="@+id/viewDivider" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        style="@style/InputLayout.OutlinedBox"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDivider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username_or_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        style="@style/InputLayout.OutlinedBox"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_4dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgetPassword"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="@string/forget_password"
        android:textColor="@color/green_jade"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/BigButton.Solid"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_18dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginWithFingerprint"
        style="@style/BigButton.Border"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_2dp"
        android:text="@string/login_with_fingerprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:text="@string/text_dont_have_account"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/size_4dp"
        app:layout_constraintEnd_toStartOf="@+id/tvRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWithFingerprint" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegister"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24dp"
        android:text="@string/text_join_now"
        android:textColor="@color/green_jade"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialTextView2"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginWithFingerprint" />

</androidx.constraintlayout.widget.ConstraintLayout>